# dynDNS_updater

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  main.yaml  merge_check.yaml  publish.yaml  unit_testing.yaml
dyndns_updater/: __main__.py  extractor.py  locator.py  updater.py  utils.py
tests/: test_dyndns_updater.py
tests/confs/: simple_conf.yaml  two_dns_providers.yaml  two_domains.yaml
