[tool.poetry]
name = "dynDNS-updater"
version = "0.1.0"
description = "standalone DNS updater for Gandi"
authors = ["David Zarebski <zarebskidavid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
schedule = "^1.1.0"
requests = "^2.25.1"
dnspython = "^2.1.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
